Updated contact page. Corrected sizing on mobile

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -23,7 +23,6 @@
     align-items: center;
 
     .lg-heading {
-      line-height: 1;
       margin-bottom: 1rem;
       font-size: 5rem;
     }
@@ -102,5 +101,9 @@
     font-weight: 600;
     font-size: 1rem;
   }
+
+.boxes div {
+  font-size: 1rem;
+}
 
 }
