--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,6 +26,7 @@ h2 {
     font-family: 'Fjalla One', sans-serif;
     text-shadow: 0px 2px 4px rgba(0,0,0,0.3);
     font-size: 6rem;
+    margin-bottom: 1rem;
   }
 
   &.sm-heading {
@@ -48,9 +49,8 @@ h4 {
 }
 
 div h4 {
-  margin-top: .5rem;
+  margin: 0;
 }
-
 
 a {
     color: #fff;
@@ -160,23 +160,23 @@ main {
   margin-top: 1rem;
 
   div {
-    font-size: 2rem;
+    font-size: 1.5rem;
     border: 2px #fff solid;
     padding: 1.5rem 2.5rem;
     margin-bottom: 3rem;
     @include easeOut;
 
     &:hover {
-      padding: 0.5rem 1.5rem;
+      padding: 1rem 2rem;
       background: $secondary-color;
-      color: set-text-color($secondary-color);
+      color: #F5F5F5;
 
       span {
-        color: set-text-color($secondary-color);
+        color: #F5F5F5;
       }
 
       a {
-        color: set-text-color($secondary-color);
+        color: #F5F5F5;
       }
     }
   }
@@ -239,7 +239,7 @@ main {
 @keyframes pulse {
 0% { box-shadow: 0 0 0 0 var(--hover);
 transform: scale(.75);
- } 
+ }
 }
 
 //Import mobile responsiveness styles
